--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PatelDharmesh02.github.io/Invoice-Generator",
+  "homepage": "https://PatelDharmesh02.github.io/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^32.0.2",
+    "ag-grid-react": "^32.0.2",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
@@ -18,6 +20,7 @@
     "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
